# Forensic-Vision

./: .gitignore  PRD_Phase1_Paper_Reproduction.md  README.md  Raghavendra paper summary.md  pyproject.toml
configs/: base.yaml
docs/: assumptions.md
scripts/: evaluate.py  infer_localize.py  prepare_dataset.py  train.py
src/forensic_vision/: __init__.py  config.py
src/forensic_vision/datasets/: __init__.py  clip_dataset.py  manifest.py  preparation.py
src/forensic_vision/evaluation/: metrics.py
src/forensic_vision/localization/: __init__.py  msssim.py
src/forensic_vision/models/: three_d_cnn.py
src/forensic_vision/preprocessing/: __init__.py  frame_diff.py  video_io.py
src/forensic_vision/training/: __init__.py  pipeline.py
